--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.1691.0",
     "framer-motion": "^11.5.4",
     "next": "14.2.9",
+    "openai": "^4.58.2",
     "react": "^18",
     "react-dropzone": "^14.2.3"
   },
