--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.9",
     "openai": "^4.58.2",
     "react": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-pdf": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
